--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -124,7 +124,7 @@
                 editForm.stale_timeout.$dirty }">
             <label for="configuration_stale_timeout_sec" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="SDK configuration stale timeout in seconds (range 60-604800)">Configuration Stale Timeout (seconds)</label>
             <div class="col-sm-10">
-              <input type="number" class="form-control" name="stale_timeout" ng-disabled="_loading" ng-model="configuration.configuration_stale_timeout_sec" id="configuration_stale_timeout_sec"  ng-min="60" ng-max="604800" required>
+              <input type="number" class="form-control" name="stale_timeout" ng-disabled="_loading" ng-model="configuration.configuration_stale_timeout_sec" id="configuration_stale_timeout_sec" ng-min="60" ng-max="604800" required>
               <div class="error-messages" ng-messages="editForm.stale_timeout.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
@@ -188,8 +188,7 @@
           <div class="form-group" ng-class="{'has-error': editForm.domainsBlackList.$invalid && editForm.domainsBlackList.$dirty}">
             <label for="domains_black_list" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="'Black list' of domains which should be always served directly from domain origin servers">Domains Black List</label>
             <div class="col-sm-10">
-              <input type="hidden" ng-model="configuration.domains_black_list" name="domainsBlackList" ng-pattern="/^[A-Za-z0-9 -]+$/"></input>
-              <ui-select tagging tagging-label="Add New Domain" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control" ng-disabled="_loading" ng-model="configuration.domains_black_list" id="domains_black_list">
+              <ui-select validate-domains-list tagging tagging-label="Add New Domain" name="domainsBlackList" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control" ng-disabled="_loading" ng-model="configuration.domains_black_list" id="domains_black_list">
                 <ui-select-match placeholder="Add domains...">{{$item}}</ui-select-match>
                 <ui-select-choices repeat="domain in configuration.domains_black_list">
                   {{domain}}
