build compiled one for heatmap js files

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -123,9 +123,10 @@
 <script type="text/javascript" src="../bower_components/angular-clipboard/angular-clipboard.js"></script>
 <!-- endbuild -->
 
-<!-- maps -->
+<!-- build:js scripts/heatmap.js -->
 <script type="text/javascript" src="js/heatmaps/highmap.us.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.world.js"></script>
+<!-- endbuild -->
 
 <script src="config.js"></script>
 <!-- Google Analytics -->
