--- a/code/dev/parts/shared/search/search.html
+++ b/code/dev/parts/shared/search/search.html
@@ -1,4 +1,4 @@
-<div style="display: inline-block; margin-left:  15px; width: 300px; vertical-align: super;">
+<div class="menu-search">
     <input class="form-control",
         name="searchInput",
         ng-model="searchTerm",
