--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -16,7 +16,7 @@
 
                 <a id="side-menu-apps-item" class="side-menu-item" ng-click="goToState('index.apps.ios')">
                     <div class="left-menu-start">
-                        <i class="fa fa-mobile" style="font-size: 28px; margin-top: -14px !important;"></i>
+                        <i class="fa fa-mobile" style="font-size: 28px;"></i>
                     </div>
                     Mobile Apps
                     <i ng-click="expandMenu('index.apps', $event)" class="pull-right {{ menuExpanded('index.apps') ? 'fa fa-caret-down' : 'fa fa-caret-up' }}"></i>
@@ -229,7 +229,7 @@
                 <nav class="navbar">
                     <div class="navbar-inner">
                         <div class="navbar-header">
-                            <div paper-drawer-toggle style="padding-right: 0">
+                            <div paper-drawer-toggle class="mobile-menu">
                                 <span class="glyphicon glyphicon-menu-hamburger" paper-drawer-toggle style="display: block !important;"></span>
                             </div>
                             <div style="display: inline-block; float:left;">
