--- a/code/parts/shared/error-messages.html
+++ b/code/parts/shared/error-messages.html
@@ -6,4 +6,4 @@
 <div ng-message="max" class="alert-text alert-text--max">The specified value is too high</div>
 <!-- Specefic Apps validation messages -->
 <!-- message for validate-domains-list -->
-<div ng-message="domains-list" class="alert-text alert-text--domains-list">The one or more domain names is not correct</div>
+<div ng-message="domains-list" class="alert-text alert-text--domains-list">Incorrect domain name format</div>
