--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="../bower_components/select2/select2.css">
   <link rel="stylesheet" href="../bower_components/select2-bootstrap-css/select2-bootstrap.css">
   <link rel="stylesheet" href="../bower_components/highlightjs/styles/github.css">
-  <link rel="stylesheet" href="../bower_components/AngularJS-Toaster/toaster.css" rel="stylesheet">
+  <link rel="stylesheet" href="../bower_components/AngularJS-Toaster/toaster.min.css" rel="stylesheet">
   <!-- endbuild -->
 
   <link rel="stylesheet" href="css/styles.css">
@@ -119,7 +119,7 @@
 <script type="text/javascript" src="../bower_components/angular-daterangepicker/js/angular-daterangepicker.js"></script>
 <script type="text/javascript" src="../bower_components/angular-bootstrap-toggle-switch/angular-toggle-switch.js"></script>
 <script type="text/javascript" src="../bower_components/angular-clipboard/angular-clipboard.js"></script>
-<script type="text/javascript" src="../bower_components/AngularJS-Toaster/toaster.js"></script>
+<script type="text/javascript" src="../bower_components/AngularJS-Toaster/toaster.min.js"></script>
 
 <script type="text/javascript" src="js/heatmaps/highmap.us.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.world.js"></script>
