Test completed by Kaushik Tadhani

--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -10,7 +10,7 @@
         <a href="https://www.revapm.com/" id="logo" target="_blank">
             <img src="images/logo_color.png" alt="Logo" />
         </a>
-        <div class="side-menu" style="height: 94%; overflow: auto;">
+        <div class="side-menu" style="height: 94%; overflow: auto;" ng-nicescroll nice-option="{cursorcolor: '#f7941e',cursorwidth: '8px',zindex: '9999999'}">
             <dashboard-nav-menu></dashboard-nav-menu>
             <li ui-sref-active-if="{class: 'active-side-menu-item', state: 'index.apps'}", ng-class="{'active-side-menu-item': menuExpanded('index.apps')}" style="margin-top: 8px;">
 
