--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -117,6 +117,8 @@
 <script type="text/javascript" src="../bower_components/angular-daterangepicker/js/angular-daterangepicker.js"></script>
 <script type="text/javascript" src="../bower_components/angular-bootstrap-toggle-switch/angular-toggle-switch.js"></script>
 <script type="text/javascript" src="../bower_components/angular-clipboard/angular-clipboard.js"></script>
+<script type="text/javascript" src="../bower_components/jquery.nicescroll/jquery.nicescroll.min.js"></script>
+<script type="text/javascript" src="../bower_components/angular-nicescroll/angular-nicescroll.js"></script>
 
 <script type="text/javascript" src="js/heatmaps/highmap.us.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.world.js"></script>
