UI changes are done as per task

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -117,8 +117,6 @@
 <script type="text/javascript" src="../bower_components/angular-daterangepicker/js/angular-daterangepicker.js"></script>
 <script type="text/javascript" src="../bower_components/angular-bootstrap-toggle-switch/angular-toggle-switch.js"></script>
 <script type="text/javascript" src="../bower_components/angular-clipboard/angular-clipboard.js"></script>
-<script type="text/javascript" src="../bower_components/jquery.nicescroll/jquery.nicescroll.min.js"></script>
-<script type="text/javascript" src="../bower_components/angular-nicescroll/angular-nicescroll.js"></script>
 
 <script type="text/javascript" src="js/heatmaps/highmap.us.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.world.js"></script>
@@ -331,6 +329,9 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/dashboard/components/dashboard-nav-menu.component.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/components/dashboard-btn-new.component.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/components/dashboard-btn-delete.conmponent.js"></script>
+<script type="text/javascript" src="../bower_components/angular-nicescroll/angular-nicescroll.js"></script>
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.6.8/jquery.nicescroll.min.js"></script>
 
 <!-- BlueTriangleTech -->
 <script type="text/javascript" src="js/portal/bluetriangletech/bluetriangletech.module.js"></script>
