SAve changes for fix a problem with adding a new user as “admin” role

--- a/code/dev/parts/users/new.html
+++ b/code/dev/parts/users/new.html
@@ -5,7 +5,7 @@
     </h2>
   </div>
 </div>
-<div class="row">
+<div class="row" ng-init="initNew()">
   <div class="col-md-12">
     <div class="panel panel-default">
       <div class="panel-heading">
