--- a/code/dev/parts/profile/edit.html
+++ b/code/dev/parts/profile/edit.html
@@ -30,8 +30,8 @@
             Loading...
           </div>
 
-          <form class="form-horizontal" name="form" ng-submit="updateProfile(user)">
-            <div class="form-group">
+          <form class="form-horizontal" name="editForm" ng-submit="updateProfile(user)" novalidate>
+            <div class="form-group"  ng-class="{'has-error': editForm.current_password.$invalid && editForm.current_password.$dirty}">
               <label for="current_password" class="col-sm-2 control-label">Current Password</label>
               <div class="col-sm-10">
                 <input type="password"
@@ -43,9 +43,12 @@
                        id="current_password"
                        autocomplete="off"
                        autofocus>
+                <div class="error-messages" ng-messages="editForm.current_password.$error" role="alert" ng-messages-multiple>
+                  <div ng-messages-include="parts/shared/error-messages.html"></div>
+                </div>
               </div>
             </div>
-            <div class="form-group">
+            <div class="form-group" ng-class="{'has-error': editForm.new_password.$invalid && editForm.new_password.$dirty}">
               <label for="new_password" class="col-sm-2 control-label">New Password</label>
               <div class="col-sm-10">
                 <input type="password"
@@ -56,9 +59,12 @@
                        ng-model="pass.new_password"
                        autocomplete="off"
                        id="new_password">
+                <div class="error-messages" ng-messages="editForm.new_password.$error" role="alert" ng-messages-multiple>
+                  <div ng-messages-include="parts/shared/error-messages.html"></div>
+                </div>
               </div>
             </div>
-            <div class="form-group">
+            <div class="form-group" ng-class="{'has-error': editForm.confirm_password.$invalid && editForm.confirm_password.$dirty}">
               <label for="confirm_password" class="col-sm-2 control-label">Confirm New Password</label>
               <div class="col-sm-10">
                 <input type="password"
@@ -69,6 +75,9 @@
                        ng-model="pass.confirm_password"
                        autocomplete="off"
                        id="confirm_password">
+                <div class="error-messages" ng-messages="editForm.confirm_password.$error" role="alert" ng-messages-multiple>
+                  <div ng-messages-include="parts/shared/error-messages.html"></div>
+                </div>
               </div>
             </div>
 
@@ -83,7 +92,7 @@
                   Cancel
                 </a>
 
-                <button class="btn btn-success" ng-disabled="disableSubmit(pass)">
+                <button class="btn btn-success" ng-disabled="editForm.$invalid">
                   <i class="glyphicon glyphicon-ok"></i>&nbsp;
                   Update Password
                 </button>
