--- a/code/dev/parts/companies/new.html
+++ b/code/dev/parts/companies/new.html
@@ -24,8 +24,8 @@
 
       </div>
       <div class="panel-body">
-        <form class="form-horizontal" ng-submit="createCompany(model)">
-          <div class="form-group">
+        <form class="form-horizontal" name="createForm" ng-submit="createCompany(model)" novalidate>
+          <div class="form-group" ng-class="{'has-error': createForm.companyName.$invalid && createForm.companyName.$dirty}">
             <label for="name" class="col-sm-2 control-label">Company Name</label>
             <div class="col-sm-10">
               <input type="text"
@@ -33,20 +33,22 @@
                      class="form-control"
                      ng-disabled="_loading"
                      ng-model="model.companyName"
+                     name="companyName"
                      id="name"
-                     placeholder="Company Name">
+                     placeholder="Company Name" required>
+              <div class="error-messages" ng-messages="createForm.companyName.$error" role="alert" ng-messages-multiple>
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
             </div>
           </div>
-          <div class="form-group">
+          <div class="form-group" ng-class="{ 'has-error': createForm.comment.$invalid && createForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label">Comment</label>
             <div class="col-sm-10">
-              <input type="text"
-                     class="form-control"
-                     ng-disabled="_loading"
-                     maxlength="300"
-                     ng-model="model.comment"
-                     id="comment"
-                     placeholder="Comment (max 300 symbol)">
+              <textarea id="comment" placeholder="Comment (max 300 symbol)" ng-maxlength="300" class="form-control" id="comment" name="comment" ng-model="model.comment" ng-disabled="_loading">
+              </textarea>
+              <div class="error-messages" ng-messages="createForm.comment.$error" role="alert" ng-messages-multiple>
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
             </div>
           </div>
 
@@ -57,7 +59,7 @@
                 <i class="glyphicon glyphicon-remove"></i>&nbsp;
                 Cancel
               </a>
-              <button class="btn btn-success" ng-disabled="_loading || !model.companyName">
+              <button class="btn btn-success" ng-disabled="_loading || createForm.$invalid">
                 <i class="glyphicon glyphicon-ok"></i>&nbsp;
                 Create Company
               </button>
