Add error message for incorrect Email

--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -1,3 +1,4 @@
+<div ng-message="email" class="alert-text alert-text--required">This field must be a valid email address</div>
 <div ng-message="required" class="alert-text alert-text--required">Please fill out the field</div>
 <div ng-message="pattern" class="alert-text alert-text--pattern">Special characters are not allowed</div>
 <div ng-message="minlength" class="alert-text alert-text--minlength">The specified value contains too few characters</div>
