--- a/code/dev/parts/apps/new.html
+++ b/code/dev/parts/apps/new.html
@@ -25,15 +25,13 @@
             <label for="app_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter a name for the app to be registered (50 characters max)">App Name *
             </label>
             <div class="col-sm-10">
-              <input type="text" name="app_name" class="form-control" ng-disabled="_loading" ng-model="model.app_name" ng-maxlength="50" id="app_name" placeholder="App name (for example, 'MyCoolApp')"
-                ng-pattern="/^[A-Za-z0-9 -]+$/" required>
+              <input type="text" name="app_name" class="form-control" ng-disabled="_loading" ng-model="model.app_name" ng-maxlength="50" id="app_name" placeholder="App name (for example, 'MyCoolApp')" ng-pattern="/^[A-Za-z0-9 -]+$/" required>
               <div class="error-messages" ng-messages="createForm.app_name.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
           </div>
-          <div class="form-group " ng-if="companies.length> 1" ng-class="{'has-error': createForm.accountId.$invalid &&
-                createForm.accountId.$dirty}">
+          <div class="form-group " ng-if="companies.length> 1" ng-class="{'has-error': createForm.accountId.$invalid && createForm.accountId.$dirty}">
             <label for="account_id" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select company name the domain should be associated with">Account *</label>
             <div class="col-sm-10">
               <input type="hidden" ng-model="model.account_id" name="accountId" required></input>
@@ -42,6 +40,9 @@
                 <ui-select-choices repeat="item.id as item in companies | filter: {companyName: $select.search}">
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
                 </ui-select-choices>
+                <div class="error-messages" ng-messages="createForm.accountId.$error" role="alert" ng-messages-multiple>
+                  <div ng-messages-include="parts/shared/error-messages.html"></div>
+                </div>
               </ui-select>
               <div class="has-error error-messages" ng-messages="createForm.accountId.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
