--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -174,7 +174,6 @@
               </div>
             </div>
           </div>
-
           <div class="form-group" ng-class="{'has-error': editForm.domainsWhiteList.$invalid && editForm.domainsWhiteList.$dirty}">
             <label for="domains_white_list" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="'White list' of domains which are allowed to be served via RevAPM (all other domains will be served directly from the customer origin server)">Domains White List</label>
             <div class="col-sm-10">
@@ -189,7 +188,6 @@
               </div>
             </div>
           </div>
-
           <div class="form-group" ng-class="{'has-error': editForm.domainsBlackList.$invalid && editForm.domainsBlackList.$dirty}">
             <label for="domains_black_list" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="'Black list' of domains which should be always served directly from domain origin servers">Domains Black List</label>
             <div class="col-sm-10">
@@ -204,20 +202,28 @@
               </div>
             </div>
           </div>
-
           <div class="form-group">
             <label for="domains_provisioned_list " popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="'Provisioned' domains which are registered in the 'Web' section of the portal and provide full middle-mile acceleration">Domains Provisioned List</label>
             <div class="col-sm-10">
-              <ui-select multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control" ng-if="getAccountDomainNameList(model.account_id).length>0" ng-disabled="_loading" ng-model="configuration.domains_provisioned_list" id="domains_provisioned_list ">
-                <ui-select-match placeholder="{{domainsListPlaceholder}}">{{$item}}</ui-select-match>
-                <ui-select-choices repeat="domain  in  getAccountDomainNameList(model.account_id)">
-                  {{domain}}
-                </ui-select-choices>
-              </ui-select>
-              <input type="text" class="form-control" placeholder="Please provision a domain first..." ng-if="getAccountDomainNameList(model.account_id).length == 0" disabled>
+              <div class="row">
+                <div class="col-sm-7">
+                  <ui-select multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control " ng-if="getAccountDomainNameList(model.account_id).length>0" ng-disabled="_loading" ng-model="configuration.domains_provisioned_list" id="domains_provisioned_list ">
+                    <ui-select-match placeholder="{{domainsListPlaceholder}}">{{$item}}</ui-select-match>
+                    <ui-select-choices repeat="domain  in  getAccountDomainNameList(model.account_id)">
+                      {{domain}}
+                    </ui-select-choices>
+                  </ui-select>
+                  <input type="text" class="form-control col-sm-4" placeholder="Please provision a domain first..." ng-if="getAccountDomainNameList(model.account_id).length == 0" disabled>
+                  <div class="error-messages" ng-messages="editForm.domainsBlackList.$error" role="alert">
+                    <div ng-messages-include="parts/shared/error-messages.html"></div>
+                  </div>
+                </div>
+                <div class="form-group col-sm-4">
+                  <a ui-sref="index.webApp.domains" class="btn btn-xs btn-primary pull-left" uib-tooltip="Manage Domains" ng-disabled="_loading"><i class="fa fa-list"></i> Manage Domains</a>
+                </div>
+              </div>
             </div>
           </div>
-
           <div class="form-group" ng-class="{ 'has-error': editForm.ratio.$invalid &&
                 editForm.ratio.$dirty }">
             <label for="a_b_testing_origin_offload_ratio" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="A/B testing offloading ratio in % (range 0-100). The specified percentage of traffic will be served directly from the application origin server">A/B Testing Offloading Ratio In % *</label>
