--- a/code/dev/parts/keys/edit.html
+++ b/code/dev/parts/keys/edit.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-12">
     <h2 class="pull-left page-title">
-      Edit API Key
+      Edit API Key <b>{{key.key_name}}</b>
     </h2>
   </div>
 </div>
@@ -28,7 +28,9 @@
         <form class="form-horizontal" name="editForm" ng-submit="ok()">
           <div class="form-group" ng-class="{'has-error': editForm.keyName.$invalid && editForm.keyName.$dirty}">
             <label for="keyName"
-                   class="col-sm-2 control-label"
+              class="col-sm-2 control-label"
+              popover-trigger="mouseenter"
+              uib-popover="API key name (30 characters max)"
             >API Key Name</label>
 
             <div class="col-sm-10">
@@ -38,6 +40,7 @@
                      id="key_name"
                      name="keyName"
                      ng-disabled="_loading"
+                     ng-maxlength="30"
                      placeholder="Api Key name" required>
               <div class="error-messages" ng-messages="editForm.keyName.$error" role="alert" ng-messages-multiple>
                   <div ng-messages-include="parts/shared/error-messages.html"></div>
