--- a/code/dev/parts/profile/two-factor-auth.html
+++ b/code/dev/parts/profile/two-factor-auth.html
@@ -63,7 +63,7 @@
                       <div class="input-group-addon">
                         <i class="glyphicon" ng-class="oneTimePassword && 'glyphicon-ok-circle' || 'glyphicon-exclamation-sign'"></i>
                       </div>
-                      <input type="text" class="form-control" name="oneTimePassword" id="one-time-password" placeholder="One-Time Password" ng-model="oneTimePassword" pattern="^\d+$" required>
+                      <input type="text" class="form-control" name="oneTimePassword" id="one-time-password" placeholder="One-Time Password" ng-model="oneTimePassword" pattern="^\d{6}$" required>
                     </div>
                   </div>
                   <button type="submit" class="btn btn-primary" ng-disabled="!oneTimePassword || _loading" ng-click="enable(oneTimePassword)">
@@ -75,6 +75,8 @@
                 </div>
                 <div class="col-sm-12 form-group" ng-class="{'has-error': editForm.oneTimePassword.$invalid && editForm.oneTimePassword.$dirty}">
                   <div class="error-messages"  ng-messages="editForm.oneTimePassword.$error" role="alert" ng-messages-multiple>
+                    <div ng-message="pattern">Please enter six digits of your one-time password</div>
+                    <div ng-message="required">Please enter six digits of your one-time password</div>
                     <div ng-messages-include="parts/shared/error-messages.html"></div>
                   </div>
                 </div>
