--- a/code/dev/parts/ssl_certs/edit.html
+++ b/code/dev/parts/ssl_certs/edit.html
@@ -21,11 +21,11 @@
       </div>
       <div class="panel-body">
         <form class="form-horizontal" name="editForm">
-          <div class="form-group" ng-class="{ 'has-error': editForm.certName.$invalid && editForm.certName.$dirty }">
-            <label for="cert_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter here a Certificate Name">Certificate Name *</label>
+          <div class="form-group" ng-class="{ 'has-error': editForm.cert_name.$invalid && editForm.cert_name.$dirty }">
+            <label for="cert_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Certificate name (150 characters max)">Certificate Name *</label>
             <div class="col-sm-10">
-              <input type="text" autofocus class="form-control" ng-disabled="_loading" ng-model="model.cert_name" name="certName" id="cert_name" placeholder="Certificate Name" required>
-              <div class="error-messages" ng-messages="editForm.accountId.$error" role="alert" ng-messages-multiple>
+              <input type="text" autofocus class="form-control" ng-disabled="_loading" ng-model="model.cert_name" name="cert_name" id="cert_name" placeholder="Certificate Name" ng-maxlength="150" required>
+              <div class="error-messages" ng-messages="editForm.cert_name.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
@@ -56,10 +56,10 @@
             </div>
           </div>
           <div class="form-group" ng-class="{ 'has-error': editForm.public_ssl_cert.$invalid && editForm.public_ssl_cert.$dirty }">
-            <label for="public_ssl_cert" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter here a Public Certificate">Public And Intermediate Certificates *
+            <label for="public_ssl_cert" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Public and intermediate SSL certificates in PEM format">Public And Intermediate Certificates *
               <br><small>(in PEM format)</small></label>
             <div class="col-md-10">
-              <textarea id="public_ssl_cert" placeholder="Public Certificate" class="form-control text--courier" name="public_ssl_cert" ng-model="model.public_ssl_cert" ng-disabled="_loading" required>
+              <textarea id="public_ssl_cert" placeholder="Public Certificate" class="form-control text--courier" name="public_ssl_cert" ng-model="model.public_ssl_cert" ng-disabled="_loading" ng-maxlength="10000" required>
               </textarea>
               <div class="error-messages" ng-messages="editForm.public_ssl_cert.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
@@ -68,10 +68,10 @@
           </div>
           <div class="form-group" ng-class="{ 'has-error': editForm.private_ssl_key.$invalid &&
                                       editForm.private_ssl_key.$dirty }">
-            <label for="private_ssl_key" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter here a Private Key">Private Key *
+            <label for="private_ssl_key" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Private SSL key in PEM format">Private Key *
               <br><small>(in PEM format, unencrypted)</small></label>
             <div class="col-md-10">
-              <textarea id="private_ssl_key" placeholder="Private Key" class="form-control text--courier" name="private_ssl_key" ng-model="model.private_ssl_key" ng-disabled="_loading" required>
+              <textarea id="private_ssl_key" placeholder="Private Key" class="form-control text--courier" name="private_ssl_key" ng-model="model.private_ssl_key" ng-disabled="_loading" ng-maxlength="10000" required>
               </textarea>
               <div class="error-messages" ng-messages="editForm.private_ssl_key.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
