--- a/code/dev/parts/ssl_certs/new.html
+++ b/code/dev/parts/ssl_certs/new.html
@@ -22,9 +22,9 @@
       <div class="panel-body">
         <form class="form-horizontal" ng-submit="createSSL_cert(model)" name="createForm">
           <div class="form-group" ng-class="{ 'has-error': createForm.certName.$invalid && createForm.certName.$dirty }">
-            <label for="cert_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter here a Certificate Name">Certificate Name *</label>
+            <label for="cert_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter here a certificate name (150 characters max)">Certificate Name *</label>
             <div class="col-sm-10">
-              <input type="text" autofocus class="form-control" ng-disabled="_loading" ng-model="model.cert_name" name="certName" id="cert_name" placeholder="Certificate Name" required>
+              <input type="text" autofocus class="form-control" ng-disabled="_loading" ng-model="model.cert_name" name="certName" id="cert_name" placeholder="Certificate Name" ng-maxlength="150" required>
               <div class="error-messages" ng-messages="createForm.certName.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
@@ -56,10 +56,11 @@
             </div>
           </div>
           <div class="form-group" ng-class="{ 'has-error': createForm.public_ssl_cert.$invalid && createForm.public_ssl_cert.$dirty }">
-            <label for="public_ssl_cert" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter here a Public Certificate">Public And Intermediate Certificates *
+            <label for="public_ssl_cert" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter here the public SSL certificate together with all required intermediate certificates in PEM format">
+              Public And Intermediate Certificates *
               <br><small>(in PEM format)</small></label>
             <div class="col-md-10">
-              <textarea id="public_ssl_cert" placeholder="Public Certificate" class="form-control text--courier" name="public_ssl_cert" ng-model="model.public_ssl_cert" ng-disabled="_loading" required>
+              <textarea id="public_ssl_cert" placeholder="Public Certificate" class="form-control text--courier" name="public_ssl_cert" ng-model="model.public_ssl_cert" ng-disabled="_loading" ng-maxlength="10000" required>
               </textarea>
               <div class="error-messages" ng-messages="createForm.public_ssl_cert.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
@@ -68,10 +69,10 @@
           </div>
           <div class="form-group" ng-class="{ 'has-error': createForm.private_ssl_key.$invalid &&
                                       createForm.private_ssl_key.$dirty }">
-            <label for="private_ssl_key" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter here a Private Key">Private Key *
+            <label for="private_ssl_key" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter here the private SSL key in PEM format">Private Key *
               <br><small>(in PEM format, unencrypted)</small></label>
             <div class="col-md-10">
-              <textarea id="private_ssl_key" placeholder="Private Key" class="form-control text--courier" name="private_ssl_key" ng-model="model.private_ssl_key" ng-disabled="_loading" required>
+              <textarea id="private_ssl_key" placeholder="Private Key" class="form-control text--courier" name="private_ssl_key" ng-model="model.private_ssl_key" ng-disabled="_loading" ng-maxlength="10000" required>
               </textarea>
               <div class="error-messages" ng-messages="createForm.private_ssl_key.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
