--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -8,3 +8,4 @@
 <!-- Specefic Apps validation messages -->
 <!-- message for validate-domains-list -->
 <div ng-message="domains-list" class="alert-text alert-text--domains-list">Incorrect domain name format</div>
+<div ng-message="compareTo">Must match the previous entry</div>
