--- a/code/dev/parts/companies/new.html
+++ b/code/dev/parts/companies/new.html
@@ -26,7 +26,7 @@
       <div class="panel-body">
         <form class="form-horizontal" name="createForm" ng-submit="createCompany(model)" novalidate>
           <div class="form-group" ng-class="{'has-error': createForm.companyName.$invalid && createForm.companyName.$dirty}">
-            <label for="name" class="col-sm-2 control-label">Company Name</label>
+            <label for="name" class="col-sm-2 control-label">Company Name *</label>
             <div class="col-sm-10">
               <input type="text"
                      autofocus
@@ -34,6 +34,7 @@
                      ng-disabled="_loading"
                      ng-model="model.companyName"
                      name="companyName"
+                     ng-maxlength="150"
                      id="name"
                      placeholder="Company Name" required>
               <div class="error-messages" ng-messages="createForm.companyName.$error" role="alert" ng-messages-multiple>
