--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -147,9 +147,7 @@
                     Users
                 </a>
                 <a ui-sref-active="active" ui-sref="index.accountSettings.companies" class="side-menu-sub-item" ng-if="userService.isReseller() || userService.isRevadmin()">
-                    <i class="sub-menu-icon fa fa-list-alt"></i>
-                    Accounts
-                </a>
+                    <i class="sub-menu-icon fa fa-list-alt"></i>Accounts</a>
                 <a ui-sref-active="active" ui-sref="index.accountSettings.keys" class="side-menu-sub-item" ng-if="!userService.isUser()">
                     <i class="sub-menu-icon fa fa-key"></i>
                     API Keys
