--- a/code/dev/parts/apps/list.html
+++ b/code/dev/parts/apps/list.html
@@ -11,6 +11,18 @@
     <button class="btn btn-danger" type="button" ng-click="ok()">OK</button>
   </div>
 </script>
+<script type="text/ng-template" id="confirmDirtyModal.html">
+  <div class="modal-header">
+    <h3 class="modal-title">Confirm</h3>
+  </div>
+  <div class="modal-body">
+    You have unsaved changes. Are you sure you want to leave the page?
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+    <button class="btn btn-danger" type="button" ng-click="ok()">OK</button>
+  </div>
+</script>
 <script type="text/ng-template" id="confirmUpdateModal.html">
   <div class="modal-header">
     <h3 class="modal-title">Confirm</h3>
