Create new  directive  "validate-cookies-options" and  move a patterns for validation to a central place

--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -8,4 +8,6 @@
 <!-- Specefic Apps validation messages -->
 <!-- message for validate-domains-list -->
 <div ng-message="domains-list" class="alert-text alert-text--domains-list">Incorrect domain name format</div>
+<!-- message for validate-cookies-options -->
+<div ng-message="cookies-options" class="alert-text alert-text--cookies-options">Incorrect cookies name format</div>
 <div ng-message="compareTo">Must match the previous entry</div>
