Create new  directive  "validate-сache-bypass-locations"

--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -12,4 +12,4 @@
 <!-- message for validate-cookies-options -->
 <div ng-message="cookies-options" class="alert-text alert-text--cookies-options">Incorrect cookies name format</div>
 <!-- message for validate-сache-bypass-locations -->
-<div ng-message="сache-bypass-locations" class="alert-text alert-text--cookies-options">Incorrect сache bypass location name format</div>
+<div ng-message="сache-bypass-locations" class="alert-text alert-text--сache-bypass-locations">Incorrect сache bypass location name format</div>
