Create new  directive  "validate-query-strings-options"

--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -13,3 +13,5 @@
 <div ng-message="cookies-options" class="alert-text alert-text--cookies-options">Incorrect cookies name format</div>
 <!-- message for validate-сache-bypass-locations -->
 <div ng-message="сache-bypass-locations" class="alert-text alert-text--сache-bypass-locations">Incorrect сache bypass location name format</div>
+<!-- message for validate-query-strings-options -->
+<div ng-message="query-strings-options" class="alert-text alert-text--query-strings-options">Incorrect query strings option name format</div>
