Create new  directive  "validate-wildcard-domain-field"

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -165,6 +165,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/shared/validators/validate-cookies-options.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-domains-list.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-query-strings-options.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/validators/validate-wildcard-domain-field.directive.js"></script>
 
 <script type="text/javascript" src="js/portal/resources/resources.module.js"></script>
 <script type="text/javascript" src="js/portal/resources/resources.config.js"></script>
