--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -15,3 +15,5 @@
 <div ng-message="сache-bypass-locations" class="alert-text alert-text--сache-bypass-locations">Incorrect сache bypass location name format</div>
 <!-- message for validate-query-strings-options -->
 <div ng-message="query-strings-options" class="alert-text alert-text--query-strings-options">Incorrect query strings option name format</div>
+<!-- message for validate-wildcard-domain-field  -->
+<div ng-message="wildcard-domain-field" class="alert-text alert-text--wildcard-domain-field">Incorrect wildcard domain field</div>
