--- a/code/dev/parts/ssl_certs/new.html
+++ b/code/dev/parts/ssl_certs/new.html
@@ -114,7 +114,7 @@
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                 <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp; Create SSL Certificate
               </button>
-              <button class="btn btn-success" id="create_ssr_cert_and_add_more" ng-disabled="disableSubmit(model)" ng-click="createSSL_cert(model,true)">
+              <button class="btn btn-success" id="create_ssr_cert_and_add_more" ng-disabled="disableSubmit(model)" ng-click="createSSL_cert(model,true);createForm.$setPristine()">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                 <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp; Create And Add More
               </button>
