--- a/code/dev/parts/domains/new.html
+++ b/code/dev/parts/domains/new.html
@@ -180,7 +180,7 @@
                 Create Domain
               </button>
               <button class="btn btn-success" id="create_domain_and_add_more"
-                      ng-disabled="disableSubmit(model) || createForm.$invalid" ng-click="createDomain(model, true)">
+                      ng-disabled="disableSubmit(model) || createForm.$invalid" ng-click="createDomain(model, true);createForm.$setPristine()">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                 <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
                 Create And Add More
